- Add an export definition to export interventions.
- Can set umask file permissions on Unix/Linux/BSD systems.
- Miscelanous bug fixes.
- A lot of other enhancements to increase productivity.
- All phone numbers show the clicktodial link if module is enabled.
- Can define hour and minutes in intervention cards.
- Can edit a validated intervention.

For translators:
- The errors language file contains only error or warning messages with 
  prefix Error or Warning.
- HTML Output is by default in UTF8.

For developers:
- Update skeletons.
- Add an experimental Cash Desk module.
- All submodules are moved in the includes directory.
- Removed some deprecated files.


***** Changelog for 2.4 compared to 2.2 *****

For users:
- Add a calendar module (module agenda) with ical/vcal/rss export.
- Look enhancement in graphics (thanks artichow).
- Add tel and fax on delivery addresses.
- Add a tool to edit personalized menu.
- Add an ical and vcal export link in agenda and webcalendar module.
- Reduce memory usage.
- Now triggers are enabled/disabled according to module they refers to.
- Fix infinite loop on popup calendar.
- Change in tanslation to make Dolibarr easier to understand.
- Add a warning when sending a mail from a user with no email defined.
- Added clicktodial module.
- Add a property private/public in contact. This allows to user Dolibarr
  for a personnal address book.
- French NAF code can accept 5 chars.
- Supplier prices can be input with or without taxe.
- New generic numbering modules to offer more solutions for generating
  automatic id.
- Add new predefined exports wizards (stocks, suppliers, taxes...).
- Add feature to log security events (logon, change of users, passwords).
- Can link all documents (included supplier invoices and orders) to a 
  project.
- Can attach several files to email when sending an invoice, order or
  proposal by email.
- Can choose accuracy (number of decimals) for prices.